--- a/app/src/main/res/layout/article_list_layout.xml
+++ b/app/src/main/res/layout/article_list_layout.xml
@@ -1,40 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="10dp"
-    android:paddingEnd="3dp"
+    android:orientation="horizontal"
     android:paddingTop="10dp"
-    android:orientation="vertical">
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp">
 
     <TextView
         android:id="@+id/ArticleTitle"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:text="Quite a long article title placeholder is here."
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:textSize="18sp"
+        android:layout_marginBottom="10dp"
+        android:layout_toEndOf="@+id/ArticleNumber" />
+
+    <TextView
+        android:id="@+id/ArticleScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Article Title"
-        android:layout_marginBottom="10dp"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        android:textSize="18sp" />
+        android:text="Score: 1234"
+        android:textSize="14sp"
+        android:layout_below="@+id/ArticleTitle"
+        android:layout_alignParentStart="true" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/ArticlePostDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Posted: 23-02-2017"
+        android:textAlignment="textEnd"
+        android:textSize="14sp"
+        android:layout_below="@+id/ArticleTitle"
+        android:layout_alignParentEnd="true" />
 
-        <TextView
-            android:id="@+id/ArticleScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Score: 1234"
-            android:textSize="14sp" />
+    <TextView
+        android:id="@+id/ArticleNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="10dp"
+        android:text="10."
+        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
-        <TextView
-            android:id="@+id/ArticlePostDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.01"
-            android:text="Posted: 23-02-2017"
-            android:textSize="14sp" />
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
