Set up ArticleActivity for viewing articles. Added events to the Arrow Images in the list view that starts the webView activity. Changed the format of the dates displayed to show how long ago the article was posted instead of the date and time of posting. Discussions still do not work and will require thier own seperate activity to handle comments and replys.

--- a/app/src/main/res/layout/article_list_layout.xml
+++ b/app/src/main/res/layout/article_list_layout.xml
@@ -34,7 +34,8 @@
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@+id/ArticleNumber"
             android:layout_toStartOf="@+id/GoToArticleContentButton"
-            android:text="A Nice Long Title For Me So I Can See What Happens"
+            android:minHeight="40dp"
+            android:text=" A two line Title A two line Title A two line Title"
             android:textAppearance="@android:style/TextAppearance.Material.Large"
             android:textSize="18sp" />
 
