--- a/app/src/main/res/layout/article_list_layout.xml
+++ b/app/src/main/res/layout/article_list_layout.xml
@@ -2,29 +2,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingStart="5dp"
-    android:paddingEnd="5dp">
+    android:paddingEnd="5dp"
+    android:paddingStart="5dp">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <TextView
             android:id="@+id/ArticlePostDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Posted: 23-02-2017"
-            android:textAlignment="textEnd"
-            android:textSize="14sp"
-            android:layout_marginTop="5dp"
             android:layout_alignBaseline="@+id/ArticleScore"
             android:layout_alignBottom="@+id/ArticleScore"
-            android:layout_alignEnd="@+id/ArticleTitle" />
+            android:layout_alignEnd="@+id/ArticleTitle"
+            android:layout_marginTop="5dp"
+            android:text="Posted: 23-02-2017"
+            android:textAlignment="textEnd"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/ArticleTitle"
@@ -43,12 +43,12 @@
             android:id="@+id/ArticleScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Score: 1234"
-            android:textSize="14sp"
-            android:layout_marginTop="5dp"
             android:layout_below="@+id/ArticleTitle"
+            android:layout_marginTop="5dp"
             android:layout_toEndOf="@+id/ArticleNumber"
-            android:layout_toStartOf="@+id/ArticlePostDate"/>
+            android:layout_toStartOf="@+id/ArticlePostDate"
+            android:text="Score: 1234"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/ArticleNumber"
@@ -65,16 +65,16 @@
             android:id="@+id/GoToArticleContentButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="40dp"
-            android:minHeight="40dp"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:background="#00000000"
             android:elevation="0dp"
+            android:minHeight="40dp"
+            android:minWidth="40dp"
             android:rotation="180"
-            android:layout_centerVertical="true"
             android:scaleType="centerCrop"
             android:visibility="visible"
-            app:srcCompat="?attr/homeAsUpIndicator"/>
+            app:srcCompat="?attr/homeAsUpIndicator" />
     </RelativeLayout>
 
 </RelativeLayout>
